--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-TWILIO_ACCOUNT_SID=YOUR-ACCOUNT_SID
-TWILIO_AUTH_TOKEN=AUTH_TOKEN
-TWILIO_PHONE_NUMBER=+71919919
-USER_PHONE_NUMBER=+91939393949
-GOOGLE_GENAI_API_KEY=YOUR_GEMINI_API_KEY
+TWILIO_ACCOUNT_SID=<YOUR-ACCOUNT-SID>
+TWILIO_AUTH_TOKEN=<AUTH-TOKEN>
+TWILIO_PHONE_NUMBER=<YOUR-TWILIO-PHONE-NUMBER>
+USER_PHONE_NUMBER=<USER-PHONE-NUMBER>
+GOOGLE_GENAI_API_KEY=<YOUR-GEMINI-API-KEY>
 DATABASE_NAME=expenses.db
